# PositiveIntent

./: .gitignore  README.md  build.py  dockerfile  install.sh  pyproject.toml
.github/workflows/: dotnet-desktop.yml
PositiveIntent/: AMSI.cs  AssemblyHelper.cs  BreakpointHelper.cs  Bypass.cs  PositiveIntent.csproj  Program.cs
PositiveIntent/Resources/: Ghost Stories.txt
Resources/: Bertha's Engagement.txt  Ghost Stories.txt  Leviathan.txt  The City of God, Volume I.txt
modules/: build.py  decrypt.py  obfuscate.py  rc4.py  sign.py  update.py
