[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PositiveIntent"
version = "1.0.0"
dependencies = [
    "pyopenssl",
    "cryptography",
    "colorama",
    "requests",
    "wonderwords"
]

[project.scripts]
pi_build = "modules.build:main"
pi_decrypt = "modules.decrypt:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["NetFuscator*", "PositiveIntent*", "modules*", "Resources*"]

[tool.setuptools.package-data]
"*" = ["**/*"]